--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "rpi-nodejs-webcam-interface",
-  "version": "1.0.0",
-  "description": "Simple webcam interface for Raspberry Pi with Camera module, based on NodeJS",
-  "main": "index.js",
+  "name": "rasp-home-web",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./bin/www & open http://localhost:3000"
   },
-  "author": "Aksel Gresvig <aksel@qlimt.com> (http://blog.akselgresvig.com/)",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.10.6",
-    "raspicam": "^0.2.13"
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "jade": "~1.11.0",
+    "less-middleware": "1.0.x",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
-    "nodemon": "^1.2.1"
+    "nodemon": "^1.8.1",
+    "uglify": "^0.1.5"
   }
 }
